--- a/potfolio.html
+++ b/potfolio.html
@@ -33,18 +33,18 @@
         </nav>
           
           <!-- contacts -->
-          <ul class="contacts-list">
-            <li class="contacts-social-item">
-              <a class="contacts-social-link "  href="mailto:info@devstudio.com" >
-                <svg class="contacts-social-icon-envelop contacts-social-link">
+          <ul class="contacts-social__list">
+            <li class="contacts-social__item">
+              <a class="contacts-social__link "  href="mailto:info@devstudio.com" >
+                <svg class="contacts-social__icon--envelop contacts-social__link">
                   <use href="./img/icons/symbol-defs.svg#icon-envelope  "></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li class="contacts-social-item">
-              <a class="contacts-social-link" href="tel:+380961111111">
-                <svg class="contacts-social-icon-smartphone contacts-social-link">
+            <li class="contacts-social__item">
+              <a class="contacts-social__link" href="tel:+380961111111">
+                <svg class="contacts-social__icon--smartphone contacts-social__link">
                   <use href="./img/icons/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
