--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <title>HomeWork1</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
           <a href="./index.html" class="navigation-logo__link"><span class="header-span">Web</span>Studio</a>
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="./index.html" class="navigation__link current ">Студія</a>
+              <a href="./index.html" class="navigation__link navigation__link--current ">Студія</a>
             </li>
             <li class="navigation__item">
               <a href="./potfolio.html" class="navigation__link">Портфоліо</a>
