--- a/potfolio.html
+++ b/potfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <title>HomeWork1</title>
   </head>
 
@@ -24,7 +24,7 @@
               <a href="./index.html" class="navigation__link">Студія</a>
             </li>
             <li class="navigation__item">
-              <a href="./potfolio.html" class="navigation__link navigation__link--current">Портфоліо</a>
+              <a href="./potfolio.html" class="navigation__link current">Портфоліо</a>
             </li>
             <li class="navigation__item">
               <a href="" class="navigation__link">Контакти</a>
