--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="./index.html" class="navigation-logo__link"><span class="header-span">Web</span>Studio</a>
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="./index.html" class="navigation__link navigation__link--current ">Студія</a>
+              <a href="./index.html" class="navigation__link current ">Студія</a>
             </li>
             <li class="navigation__item">
               <a href="./potfolio.html" class="navigation__link">Портфоліо</a>
