--- a/potfolio.html
+++ b/potfolio.html
@@ -82,7 +82,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -94,7 +94,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-1.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-1.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -106,7 +106,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-2.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-2.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -118,7 +118,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-3.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-3.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -130,7 +130,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-4.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-4.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -142,7 +142,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-5.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-5.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -154,7 +154,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-6.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-6.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -166,7 +166,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-7.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-7.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
@@ -178,7 +178,7 @@
           <li class="portfolio-pictures__background">
             <a href="#" class="portfolio-pictures__link link">
               <div class="portfolio-pictures__img">
-                <img src="./portfolio-img/img-8.jpg" alt="зображення" width="370" height="295">
+                <img src="./img/portfolio-img/img-8.jpg" alt="зображення" width="370" height="295">
                 <p class="portfolio-pictures__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-pictures__title">
